# scribe-flow

./: .gitignore  README.md
.bruno/ScribeFlow/: bruno.json
.bruno/ScribeFlow/Auth Access/: Get Piece.bru  List Piece Tenses.bru  List Pieces.bru  Logout.bru  Test.bru  folder.bru
.bruno/ScribeFlow/Guess Access/: Login.bru  (+3 more)
.docs/: todo.md
.documents/: design.md
api/: CLAUDE.md  composer.json  laravel-llm.txt
api/bootstrap/: app.php
api/config/: constants.php  cors.php  database.php  fortify.php  generators.php  horizon.php  prism.php  prompts.php  sanctum.php  solo.php  tags.php
api/routes/: api.php  api_v1.php  channels.php  web.php
frontend/: .env.example  package-lock.json  package.json
frontend/src/: router.ts  style.css
tui/: .env.example  .gitignore  CLAUDE.md  composer.json  environment.yml  pyproject.toml  requirements.txt
tui/app/Commands/: MenuCommand.php  SetupCommand.php
tui/app/Dtos/: UserItem.php
tui/app/Models/: UserInfo.php
tui/app/Providers/: AppServiceProvider.php
tui/app/Services/: AuthService.php  LoginService.php
tui/app/Traits/: Screenable.php
tui/config/: app.php  constants.php  database.php  logging.php
tui/database/migrations/: 2025_07_06_210822_create_user_infos_table.php
tui/src/scribe/: __main__.py  app.py  init.py  main.py
tui/src/scribe/api/: client.py
tui/src/scribe/screens/: dashboard.py  home.py  login.py
webapp/: composer.json  package-lock.json  package.json
webapp/config/: constants.php  cors.php  generators.php  sanctum.php  tags.php
webapp/routes/: api.php  api_v1.php  auth.php  web.php
(+289 files in other folders)
